--- a/css/game.css
+++ b/css/game.css
@@ -128,6 +128,15 @@ table {
   border-spacing: 0;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 html {
   height: 100%;
   width: 100%;
@@ -143,52 +152,28 @@ body {
   font-family: "Roboto Mono", sans-serif;
 }
 
-main {
-  width: 700px;
-  height: 80vh;
+.play-area {
   display: flex;
-  flex-direction: column;
+  background-color: #2b2d42;
+  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  width: 25px;
+  height: 25px;
+  transition: all 2s cubic-bezier(0.87, 0, 0.13, 1);
 }
 
-.title-box {
-  display: flex;
+.area-ready {
+  width: 1200px;
+  height: 700px;
 }
 
-.title {
-  color: #edf2f4;
-  font-weight: 700;
-  font-size: 150px;
-  margin-bottom: 125px;
-  text-shadow: 5px 1px 0px #edf2f47e;
-  padding: 60px;
-  border: dashed 4px #bbccd3;
+.back-card-normal {
 }
 
-.menu-box {
-  display: flex;
-  font-size: 50px;
-  flex-direction: column;
-  justify-content: spa;
-  align-items: center;
-}
-
-.menu-items {
-  margin: 10px;
-}
-
-.menu-items a {
-  text-decoration: none;
-  color: #2b2d42;
-  font-weight: 700;
-  margin: 0 -0.25rem;
-  padding: 0 10px;
-  transition: color 0.2s ease-in-out, box-shadow 0.7s ease-in-out;
-  letter-spacing: 5px;
-}
-
-.menu-items a:hover {
-  color: #edf2f4;
-  box-shadow: inset 500px 0 0 0 #2b2d42;
+.back-card-normal-ready {
+  width: 150px;
+  height: 225px;
+  animation: 2s fadeIn;
 }
